--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
     }
   ],
   "require": {
-    "illuminate/support": "^5.6"
+    "illuminate/support": "^5.6",
+    "doctrine/dbal": "^2.8",
+    "illuminate/validation": "^5.6",
+    "illuminate/console": "^5.6"
   },
   "autoload": {
     "psr-4": {
